syntax = "proto3";
package v1;
option go_package = ".;proto_v1";

message HealthRequest{}

enum HealthyType {
  Healthy=0;
  Unhealthy=1;
}

message HealthResponse{
  HealthyType Health=1;
}

message AllocateRequest{
  string command=1;
  string id=2;
  string ifName=3;
  string namespace=4;
  string name=5;
  string uid=6;
}

message AllocateResponse{
  string ip=1;
}

message ReleaseResponse{}

message GatewayRequest{
  string node=1;
}
message GatewayResponse{
  string gateway=1;
}

service ipService{
  rpc Allocate(AllocateRequest) returns (AllocateResponse){}
  rpc Release(AllocateRequest) returns (ReleaseResponse){}
  rpc Health(HealthRequest) returns (HealthResponse){}
}